--- a/Frontend_ss/src/index.css
+++ b/Frontend_ss/src/index.css
@@ -10,9 +10,13 @@
   background-clip: text;
 }
 
+body{
+  height: 100vh;
+  position: relative;
+}
+
 body::-webkit-scrollbar{
   display: none;
-  position: relative;
 }
 
 audio{
